Added new daycare method and view

--- a/app/views/profiles/partials/_supplier-show.html.erb
+++ b/app/views/profiles/partials/_supplier-show.html.erb
@@ -27,7 +27,7 @@
     <%# </ul> %>
   <%# </li> %>
   <li class="nav-item">
-    <a class="nav-link" href="#">Add new daycare</a>
+    <a class="nav-link" href="/daycares/new">Add new daycare</a>
   </li>
 </ul>
 <div class="tab-content" id="myTabContent">
