--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -1,5 +1,5 @@
-<h1>Welcome to the Daycares Show Page!</h1>
+<h1>Welcome to the <%= @daycare.name %> Show Page!</h1>
     <%= simple_form_for [@daycare, @consultation] do |f| %>
-    <%= f.input :time, as: :date, html5: true %>
+    <%= f.input :date_time, as: :datetime, html5: true %>
     <%= f.button :submit, label: "Consult now", class: "btn btn-primary" %>
     <% end %>
