Added ability to sort by consultation status, client and admin

--- a/app/views/profiles/partials/client-tabs/_all-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_all-tab.html.erb
@@ -1,5 +1,6 @@
 <h2>All consultations:</h2>
 <% @user.consultations.each do |consultation| %>
   <h3><%= consultation.daycare.name %></h3>
-  <p><%= consultation.time %></p>
+  <p><%= consultation.date_time %></p>
+  <p>Status:<%= consultation.status %></p>
 <% end %>
