--- a/app/views/profiles/partials/tabs/_confirmed-tab.html.erb
+++ b/app/views/profiles/partials/tabs/_confirmed-tab.html.erb
@@ -1,6 +1,7 @@
-<h2>Your pending consultations:</h2>
-<% @admin_consultations[0].each do |consultation| %>
+<h2>Your confirmed consultations:</h2>
+<% @confirmed_consultations[0].each do |consultation| %>
   <h2>Booked by: <%= link_to "#{consultation.client.first_name} #{consultation.client.last_name}", client_profile_path(consultation.client) %></h2>
   <p><%= consultation.daycare.name %></p>
-  <p><%= consultation.time %></p>
+  <p><%= consultation.date_time %></p>
+  <p>Status:<%= consultation.status %></p>
 <% end %>
