--- a/app/views/profiles/partials/client-tabs/_confirmed-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_confirmed-tab.html.erb
@@ -1,5 +1,6 @@
 <h2>Your Confirmed consultations:</h2>
-<% @user.consultations.each do |consultation| %>
+<% @user.consultations.confirmed.each do |consultation| %>
   <h3><%= consultation.daycare.name %></h3>
-  <p><%= consultation.time %></p>
+  <p><%= consultation.date_time %></p>
+  <p>Status:<%= consultation.status %></p>
 <% end %>
