As a parent we can add a review

--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Results</h1>
+<h1>Daycares:</h1>
 <% @daycares.each do |daycare| %>
   <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
   <p><%= daycare.address %></p>
