--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -3,3 +3,17 @@
     <%= f.input :date_time, as: :datetime, html5: true %>
     <%= f.button :submit, label: "Consult now", class: "btn btn-primary" %>
     <% end %>
+
+<h2>Reviews:</h2>
+<ul>
+<% @daycare.reviews.each do |review| %>
+  <li><strong><%= review.stars %> Stars: </strong><%= review.content %> <strong>by: <%= review.client.first_name %></strong></li>
+<% end %>
+</ul>
+
+<h2>Add a Review</h2>
+    <%= simple_form_for [@daycare, @review] do |f| %>
+    <%= f.input :stars, as: :radio_buttons, collection: (1..5).each, html5: true %>
+    <%= f.input :content, as: :text, html5: true %>
+    <%= f.button :submit, label: "Add a Review", class: "btn btn-primary" %>
+    <% end %>
