Admins and parents can perform all relevant actions on consultations

--- a/app/views/profiles/partials/client-tabs/_pending-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_pending-tab.html.erb
@@ -1,6 +1,6 @@
 <h2>Your pending consultations:</h2>
 <% @user.consultations.pending.each do |consultation| %>
-  <h3><%= consultation.daycare.name %></h3>
+  <h3><%= link_to consultation.daycare.name, daycare_path(consultation.daycare) %></h3>
   <p><%= consultation.date_time %></p>
   <p>Status:<%= consultation.status %></p>
 <% end %>
