--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -7,7 +7,13 @@
 <h2>Reviews:</h2>
 <ul>
 <% @daycare.reviews.each do |review| %>
-  <li><strong><%= review.stars %> Stars: </strong><%= review.content %> <strong>by: <%= review.client.first_name %></strong></li>
+  <li><strong><%= review.stars %> Stars: </strong><%= review.content %> <strong>by: <%= review.client.first_name %> <%= review.client.last_name %></strong>
+    <% if review.client.first_name == current_user.first_name %>
+    <%= link_to review_path(review), method: :delete, data: {confirm: 'Are you sure you want to delete this review?'} do %>
+    <i class="fa-solid fa-trash-can"></i>
+    <% end %>
+    <% end %>
+    </li>
 <% end %>
 </ul>
 
