--- a/app/views/profiles/partials/client-tabs/_pending-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_pending-tab.html.erb
@@ -1,5 +1,8 @@
 <h2>Your pending consultations:</h2>
 <% @user.consultations.each do |consultation| %>
+  <% if consultation.status == 'pending' %>
   <h3><%= consultation.daycare.name %></h3>
-  <p><%= consultation.time %></p>
+  <p><strong>Date and Time:</strong><%= consultation.date_time %></p>
+  <p><strong>Status:</strong><%= consultation.status %></p>
+  <% end %>
 <% end %>
