--- a/app/views/profiles/partials/tabs/_pending-tab.html.erb
+++ b/app/views/profiles/partials/tabs/_pending-tab.html.erb
@@ -2,5 +2,5 @@
 <% @admin_consultations[0].each do |consultation| %>
   <h2>Booked by: <%= link_to "#{consultation.client.first_name} #{consultation.client.last_name}", client_profile_path(consultation.client) %></h2>
   <p><%= consultation.daycare.name %></p>
-  <p><%= consultation.time %></p>
+  <p><%= consultation.date_time %></p>
 <% end %>
