--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -1,4 +1,16 @@
 <h1>Welcome to the <%= @daycare.name %> Show Page!</h1>
+    <p><strong>Address:</strong> <%= @daycare.address %></p>
+    <p><strong>Description:</strong> <%= @daycare.description %></p>
+    <p><strong>Price: $</strong> <%= @daycare.price%></p>
+    <p><strong>Description:</strong> <%= @daycare.description%></p>
+    <% if user_signed_in? %>
+    <% if @daycare.supplier.first_name == current_user.first_name %>
+    <%= link_to edit_daycare_path(@daycare), data: {confirm: 'Are you sure you want to edit this daycare?'} do %>
+    <i class="fa-solid fa-pencil"></i>
+    <% end %>
+    <% end %>
+    <% end %>
+
     <%= simple_form_for [@daycare, @consultation] do |f| %>
     <%= f.input :date_time, as: :datetime, html5: true %>
     <%= f.button :submit, label: "Consult now", class: "btn btn-primary" %>
