Did basic css design on home and daycare show

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,41 @@
 // Specific CSS for your home-page
+.banner {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  height: 100vh;
+  width: 100%;
+}
+
+.banner h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 72px;
+  font-weight: bold;
+  margin-top: 100px;
+}
+
+.banner p {
+  font-size: 32px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.map-column {
+  border-radius: 12px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  margin-top: 30px;
+}
+
+.map-sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 15vh;
+  padding: 50px;
+}
+
+.checked {
+  color: orange;
+}
