--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -1,14 +1,70 @@
-<h1>Daycares:</h1>
-<% @daycares.each do |daycare| %>
-  <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
-  <p><%= daycare.address %></p>
-  <p>$<%= daycare.price %>per week</p>
-  <p><%= daycare.description %></p>
-  <p>Openings: <%= daycare.number_of_openings %></p>
-<% end %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://media.edutopia.org/styles/responsive_2880px_16x9/s3/sites/default/files/masters/2021-10/istockphoto-1031753828-crop.jpg);">
+  <div class="container">
+    <h1>Toddlr</h1>
+    <p>Find the best daycare for your kids.</p>
+  </div>
+</div>
 
-<div class="map-column map-sticky" style="width: 100%; height: 600px;"
-  data-controller="mapbox"
-  data-mapbox-markers-value="<%= @markers.to_json %>"
-  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+
+
+<div class= 'container'>
+  <div class='row'>
+    <div class='col col-sm-9'>
+      <div class="d-flex flex-wrap">
+        <% @daycares.each do |daycare| %>
+          <div class='col col-sm-6 p-2'>
+            <div class="card-product">
+              <img src="https://static01.nyt.com/images/2020/10/16/multimedia/par-daycare-16/par-daycare-16-superJumbo.jpg" />
+              <div class="card-product-infos flex-column d-flex justify-content-between">
+                <div class="align-self-start">
+                  <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
+
+                    <%# Sorry about this: %>
+                    <div>
+                      <% if daycare.rating >= 1 %>
+                        <span class="fa fa-star checked"></span>
+                      <% else %>
+                        <span class="fa fa-star"></span>
+                      <% end %>
+                      <% if daycare.rating >= 2 %>
+                        <span class="fa fa-star checked"></span>
+                      <% else %>
+                        <span class="fa fa-star"></span>
+                      <% end %>
+                      <% if daycare.rating >= 3 %>
+                        <span class="fa fa-star checked"></span>
+                      <% else %>
+                        <span class="fa fa-star"></span>
+                      <% end %>
+                      <% if daycare.rating >= 4 %>
+                        <span class="fa fa-star checked"></span>
+                      <% else %>
+                        <span class="fa fa-star"></span>
+                      <% end %>
+                      <% if daycare.rating >= 5 %>
+                        <span class="fa fa-star checked"></span>
+                      <% else %>
+                        <span class="fa fa-star"></span>
+                      <% end %>
+                    </div>
+                </div>
+                <p><%= daycare.description[0,100] %></p>
+
+                <%# Replace Date.today with opening_date %>
+                <p><strong>Availability:</strong> <%= Date.today.strftime("%B") %></p>
+
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <div class='col col-sm-3'>
+      <div class="map-column map-sticky" style="width: 100%; height: 600px;"
+        data-controller="mapbox"
+        data-mapbox-markers-value="<%= @markers.to_json %>"
+        data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
+    </div>
+  </div>
 </div>
