Added basic style. Have not started consultations cards for admins

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,4 +4,5 @@
 @import "form_legend_clear";
 @import "map";
 @import "navbar";
-@import "index-cards"
+@import "index-cards";
+@import "profile-cards";
