--- a/app/views/profiles/partials/_supplier-show.html.erb
+++ b/app/views/profiles/partials/_supplier-show.html.erb
@@ -1,9 +1,24 @@
-<h1>Hello, <%= current_user.company_name %></h1>
+<div class='container'>
+  <div class="profile-header">
+    <h1 class= "mt-4">Hello, <%= current_user.company_name %>!</h1>
+  </div>
+
+<%# Display profile photo here %>
+  <div class="row mt-4 pb-4">
+    <div class="col-lg-12">
+      <div class="card-trip line-break">
+      </div>
+      <div class="card-trip mt-4">
+        <div class="d-flex justify-content-between align-items-start">
+          <h2>Your bio:</h2>
+        </div>
+        <p class="line-break pb-4"><%= current_user.bio %></p>
+      </div>
+    </div>
+
 
 <%# Display profile photo here %>
 
-<h2>Your bio:</h2>
-<p><%= current_user.bio %></p>
 
 <%# Tabs to access daycares, consultations and add a daycare (default to daycares) %>
 <ul class="nav nav-tabs">
