--- a/app/views/profiles/partials/tabs/_daycares-tab.html.erb
+++ b/app/views/profiles/partials/tabs/_daycares-tab.html.erb
@@ -1,9 +1,44 @@
-<h2>Your daycares:</h2>
-
-<% current_user.daycares.each do |daycare| %>
-  <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
-  <p><%= daycare.address %></p>
-  <p>$<%= daycare.price %>per week</p>
-  <p><%= daycare.description %></p>
-  <p>Openings: <%= daycare.number_of_openings %></p>
-<% end %>
+<%# <h2>Your daycares:</h2> %>
+<div class="row">
+  <% current_user.daycares.each do |daycare| %>
+    <div class='col col-sm-6'>
+      <div class="card-profile mt-4 d-flex flex-column">
+        <img src= "https://www.todaysparent.com/wp-content/uploads/2016/09/daycare-germs-what-you-need-to-know-1280x960-new.jpg" class="w-100"/>
+        <div class="card-profile-infos d-flex justify-contents-between">
+          <div class="d-flex flex-column align-items-between m-2">
+            <h2><%= link_to daycare.name, daycare_path(daycare) %></h2>
+              <div>
+                <% if daycare.rating >= 1 %>
+                  <span class="fa fa-star checked"></span>
+                <% else %>
+                  <span class="fa fa-star"></span>
+                <% end %>
+                <% if daycare.rating >= 2 %>
+                  <span class="fa fa-star checked"></span>
+                <% else %>
+                  <span class="fa fa-star"></span>
+                <% end %>
+                <% if daycare.rating >= 3 %>
+                  <span class="fa fa-star checked"></span>
+                <% else %>
+                  <span class="fa fa-star"></span>
+                <% end %>
+                <% if daycare.rating >= 4 %>
+                  <span class="fa fa-star checked"></span>
+                <% else %>
+                  <span class="fa fa-star"></span>
+                <% end %>
+                <% if daycare.rating >= 5 %>
+                  <span class="fa fa-star checked"></span>
+                <% else %>
+                  <span class="fa fa-star"></span>
+                <% end %>
+              </div>
+            <p><%= daycare.address %></p>
+            <p><%= daycare.description %></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
