--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="line-break">
-        <h2>Reviews:</h2>
+        <h2 class="mt-3">Reviews:</h2>
         <% @daycare.reviews.each do |review| %>
           <div class="review-card mt-4">
             <div class="d-flex justify-content-between">
