--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -48,3 +48,11 @@ margin-bottom: 2px;
   height: 60px;
   width: 60px;
   }
+
+.book-now {
+  border-radius: 12px;
+}
+
+.btn  {
+  border-radius: 12px;
+}
