--- a/app/views/daycares/new.html.erb
+++ b/app/views/daycares/new.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :description %>
     <%= f.input :price %>
     <%= f.input :number_of_openings %>
+    <%= f.input :photo, as: :file %>
     <%#= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%# <div class='d-flex justify-content-between pt-4'> %>
       <%# <p class='m-0'> %>
