--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,6 @@
         <%= yield %>
       </div>
     <%# <p class="notice"><%= notice </p> %>
-    <p class="alert"><%= alert %></p>
+    <%# <p class="alert"><%= alert </p> %>
   </body>
 </html>
