--- a/app/views/profiles/partials/_client-show.html.erb
+++ b/app/views/profiles/partials/_client-show.html.erb
@@ -6,20 +6,21 @@
 <%# Display profile photo here %>
   <div class="row mt-4 pb-4">
     <div class="col-lg-12">
-      <div class="card-trip line-break">
-      </div>
-      <div class="card-trip mt-4">
-        <div class="d-flex justify-content-between align-items-start">
-          <h2>Your bio:</h2>
+      <div class="card-trip line-break"></div>
+        <div class="card-trip mt-4">
+          <div class="d-flex justify-content-between align-items-start">
+            <h2>Your bio:</h2>
+            <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary" %>
+          </div>
+          <p><%= current_user.bio %></p>
+          <p class="line-break pb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus delectus suscipit totam animi modi dolorem fugit? Sapiente, pariatur eum minus, fugiat magni unde</p>
         </div>
-        <p><%= current_user.bio %></p>
-        <p class="line-break pb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus delectus suscipit totam animi modi dolorem fugit? Sapiente, pariatur eum minus, fugiat magni unde</p>
       </div>
     </div>
 
 
 <ul class="nav nav-tabs">
-  <li class="nav-item">
+  <li class="nav">
     <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#test" aria-current="page" id="test-tab" href="#">All Consultations</a>
   </li>
   <li>
@@ -34,3 +35,4 @@
   <div class="tab-pane fade" id="pending" role="tabpanel"> <%= render 'profiles/partials/client-tabs/pending-tab'%></div>
   <div class="tab-pane fade" id="upcoming" role="tabpanel"><%= render 'profiles/partials/client-tabs/confirmed-tab'%></div>
 </div>
+<%= link_to "Delete my profile", my_profile_path, method: :delete %>
