--- a/app/views/profiles/partials/_client-show.html.erb
+++ b/app/views/profiles/partials/_client-show.html.erb
@@ -29,10 +29,15 @@
   <li>
     <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#upcoming" aria-current="page" id="test-upcoming" href="#">Upcoming Consultations</a>
   </li>
+    <li>
+    <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#reviews" aria-current="page" id="test-reviews" href="#">Your Reviews</a>
+  </li>
 </ul>
 <div class="tab-content" id="myTabContent">
   <div class="tab-pane fade show active" id="test" role="tabpanel"><%= render 'profiles/partials/client-tabs/all-tab'%></div>
   <div class="tab-pane fade" id="pending" role="tabpanel"> <%= render 'profiles/partials/client-tabs/pending-tab'%></div>
   <div class="tab-pane fade" id="upcoming" role="tabpanel"><%= render 'profiles/partials/client-tabs/confirmed-tab'%></div>
+  <div class="tab-pane fade" id="reviews" role="tabpanel"><%= render 'profiles/partials/client-tabs/reviews-tab'%></div>
+
 </div>
 <%= link_to "Delete my profile", my_profile_path, method: :delete %>
