--- a/app/views/daycares/edit.html.erb
+++ b/app/views/daycares/edit.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :description %>
     <%= f.input :price %>
     <%= f.input :number_of_openings %>
+    <%= f.association :tags, as: :check_boxes, collection_check_boxes: @tags, prompt: "Select relevant tags"%>
     <%= f.input :photo, as: :file %>
     <%#= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%# <div class='d-flex justify-content-between pt-4'> %>
