filtering works, needs testing

--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -8,6 +8,29 @@
 
 
 <div class= 'container'>
+  <div class="d-flex justify-content-between tags mt-4 mb-4">
+    <div class="flex-column">
+      <i class="fa-solid fa-house-medical">  <%= link_to 'Vaccinated staff', root_path(:tag => 'Vaccinated staff') %></i>
+    </div>
+    <div class="flex-column">
+      <i class="fa-solid fa-baseball"><%= link_to 'Large playground', root_path(:tag => 'Large playground') %></i>
+    </div>
+    <div class="flex-column">
+      <i class="fa-solid fa-tree"><%= link_to 'Nearby park', root_path(:tag => 'Nearby park') %></i>
+    </div>
+    <div class="flex-column">
+      <i class="fa-solid fa-graduation-cap"><%= link_to 'Montessori', root_path(:tag => 'Montessori') %></i>
+    </div>
+    <div class="flex-column">
+      <i class="fa-solid fa-music"><%= link_to 'Music instruction', root_path(:tag => 'Music instruction') %></i>
+    </div>
+    <div class="flex-column">
+      <i class="fa-solid fa-rainbow"><%= link_to 'LGBTQIA+', root_path(:tag => 'LGBTQIA+ friendly') %></i>
+    </div>
+    <div class="flex-column">
+      <i class="fa-solid fa-peanut"><%= link_to 'Allergy friendly', root_path(:tag => 'Allergy friendly') %></i>
+    </div>
+  </div>
   <div class='row'>
     <div class='col col-sm-9'>
       <div class="d-flex flex-wrap">
