--- a/app/views/daycares/edit.html.erb
+++ b/app/views/daycares/edit.html.erb
@@ -10,7 +10,7 @@
     <%#= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%# <div class='d-flex justify-content-between pt-4'> %>
       <%# <p class='m-0'> %>
-    <%= f.submit "Edit Daycare", class: "btn btn-primary" %>
+    <%= f.submit "Submit Changes", class: "btn btn-primary" %>
       <%# </p> %>
     <%# </div> %>
   <% end %>
