--- a/app/views/profiles/partials/tabs/_daycares-tab.html.erb
+++ b/app/views/profiles/partials/tabs/_daycares-tab.html.erb
@@ -37,7 +37,11 @@
             <p><%= daycare.address %></p>
             <p><%= daycare.description %></p>
           </div>
-          <%= link_to "Delete", daycare_path(daycare), method: :delete %>
+          <div class="flex-column">
+            <%= link_to "Delete", daycare_path(daycare), method: :delete %>
+            <%= link_to "Edit", edit_daycare_path(daycare)%>
+          </div>
+
         </div>
       </div>
     </div>
