Added css to tagbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,3 +14,8 @@
 .form-control {
   border-radius: 12px;
 }
+
+.line-break-navbar {
+  border-bottom: 1px solid rgba(80,80,80,0.2);
+  padding: 12px 0px 12px 0px;
+}
