--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <%= render "shared/navbar" %>
             <%= render 'shared/flashes' %>
           </div>
-          <div class="line-break p-0"></div>
+          <div class="line-break-navbar p-0"></div>
         </div>
         <%= yield %>
       </div>
