--- a/app/views/daycares/edit.html.erb
+++ b/app/views/daycares/edit.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :price %>
     <%= f.input :number_of_openings %>
     <%= f.association :tags, as: :check_boxes, collection_check_boxes: @tags, prompt: "Select relevant tags"%>
-    <%= f.input :photo, as: :file %>
+    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%#= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%# <div class='d-flex justify-content-between pt-4'> %>
       <%# <p class='m-0'> %>
