--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -41,22 +41,49 @@
   </div>
 
   <%# Photo gallery %>
+  <% if @daycare.photos.present? %>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img
+        class="d-block w-100"
+        src="<%= cl_image_path(@daycare.photos[0].key) %>"
+        alt="First slide"
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        class="d-block w-100"
+        src="<%= cl_image_path(@daycare.photos[1].key) %>"
+        alt="Second slide"
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+      class="d-block w-100"
+      src="<%= cl_image_path(@daycare.photos[2].key) %>"
+      alt="Third slide"
+      />
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+  <% else %>
   <div class="gallery-container">
     <div class="row">
       <div class="col-lg-8 mt-2 mb-2">
-        <% if @daycare.photo.present? %>
-        <img
-          src="<%= cl_image_path(@daycare.photo.key) %>"
-          alt="Daycare Photo One"
-          class=" shadow-1-strong gallery-container image big-image"
-        />
-        <% else %>
         <img
           src="https://kidsrkids.com/greatwood-canyon-gate/wp-content/uploads/sites/100/2019/07/Preschool-Teachers-1000x630.jpg"
           alt="Daycare Photo One"
           class=" shadow-1-strong gallery-container image big-image"
         />
-        <% end %>
       </div>
       <div class="col-lg-4 col-md-12 mb-4 mt-2 mb-lg-0 d-flex flex-column gallery-container">
         <img
@@ -72,7 +99,7 @@
       </div>
     </div>
   </div>
-
+<% end %>
   <%# Listing info %>
   <div class="row mt-4">
     <div class="col-lg-8">
