--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -41,8 +41,12 @@
   </div>
 
   <%# Photo gallery %>
-  <% if @daycare.photos.present? %>
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+
+  <div class="gallery-container">
+    <div class="row">
+      <div class="col-lg-8 mt-2 mb-2">
+    <% if @daycare.photos.present? %>
+  <div id="daycare-pics" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img
@@ -66,18 +70,29 @@
       />
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#daycare-pics" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#daycare-pics" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
-  <% else %>
-  <div class="gallery-container">
-    <div class="row">
+  </div>
+  </div>
+  <div class="col-lg-4 col-md-12 mb-4 mt-2 mb-lg-0 d-flex flex-column gallery-container">
+        <img
+          src="https://www.tnrl.ca/wp-content/uploads/sites/2/2021/10/Daycare-Storytime-Web-Page.jpg"
+          alt="Table Full of Spices"
+          class="w-100 h-25 d-inline-block shadow-1-strong mb-4 image small-image"
+        />
+        <img
+          src="https://procaresoftware.com/wp-content/uploads/2021/03/AdobeStock_267007668_Resized-1024x682.jpeg"
+          alt="Table Full of Spices"
+          class="w-100 h-75 shadow-1-strong rounded-3 image overflow-hidden medium-image"
+        />
+      </div>
+      <% else %>
       <div class="col-lg-8 mt-2 mb-2">
         <img
           src="https://kidsrkids.com/greatwood-canyon-gate/wp-content/uploads/sites/100/2019/07/Preschool-Teachers-1000x630.jpg"
