--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -41,46 +41,38 @@
   </div>
 
   <%# Photo gallery %>
-
   <div class="gallery-container">
     <div class="row">
       <div class="col-lg-8 mt-2 mb-2">
-    <% if @daycare.photos.present? %>
-  <div id="daycare-pics" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img
-        class="d-block w-100"
-        src="<%= cl_image_path(@daycare.photos[0].key) %>"
-        alt="First slide"
-      />
-    </div>
-    <div class="carousel-item">
-      <img
-        class="d-block w-100"
-        src="<%= cl_image_path(@daycare.photos[1].key) %>"
-        alt="Second slide"
-      />
-    </div>
-    <div class="carousel-item">
-      <img
-      class="d-block w-100"
-      src="<%= cl_image_path(@daycare.photos[2].key) %>"
-      alt="Third slide"
-      />
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#daycare-pics" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#daycare-pics" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-  </div>
-  </div>
-  <div class="col-lg-4 col-md-12 mb-4 mt-2 mb-lg-0 d-flex flex-column gallery-container">
+        <% if @daycare.photos.present? %>
+        <div id="daycare-pics" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <% @daycare.photos.each_with_index do |photo, index| %>
+            <% if index == 0 %>
+            <div class="carousel-item active">
+            <% else %>
+            <div class="carousel-item">
+            <% end %>
+              <img
+                class="d-block w-100"
+                src="<%= cl_image_path(@daycare.photos[index].key) %>"
+                alt="First slide"
+              />
+            </div>
+
+            <% end %>
+            </div>
+              <a class="carousel-control-prev" href="#daycare-pics" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#daycare-pics" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+      <div class="col-lg-4 col-md-12 mb-4 mt-2 mb-lg-0 d-flex flex-column gallery-container">
         <img
           src="https://www.tnrl.ca/wp-content/uploads/sites/2/2021/10/Daycare-Storytime-Web-Page.jpg"
           alt="Table Full of Spices"
