--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -54,7 +54,7 @@
             <div class="carousel-item">
             <% end %>
               <img
-                class="d-block w-100"
+                class="d-block w-100 shadow-1-strong gallery-container image big-image"
                 src="<%= cl_image_path(@daycare.photos[index].key) %>"
                 alt="First slide"
               />
