--- a/app/views/profiles/partials/_supplier-show.html.erb
+++ b/app/views/profiles/partials/_supplier-show.html.erb
@@ -10,7 +10,7 @@
       <div class="card-trip mt-4">
         <div class="d-flex justify-content-between align-items-start">
           <h2>Your bio:</h2>
-          <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary" %>
+          <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary confirm-btn" %>
         </div>
         <p class="line-break pb-4"><%= current_user.bio %></p>
       </div>
@@ -46,4 +46,6 @@
   <div class="tab-pane fade" id="pending" role="tabpanel"> <%= render 'profiles/partials/tabs/pending-tab'%></div>
   <div class="tab-pane fade" id="upcoming" role="tabpanel"><%= render 'profiles/partials/tabs/confirmed-tab'%></div>
 </div>
-<%= link_to "Delete my profile", my_profile_path, method: :delete %>
+<div class="mt-4">
+  <%= link_to "Delete my profile", my_profile_path, method: :delete %>
+</div>
