--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
         </div>
         <%= yield %>
       </div>
-
+      <div class="line-break-footer">
+    <%= render "shared/footer" %>
+    </div>
     <%# <p class="notice"><%= notice </p> %>
     <%# <p class="alert"><%= alert </p> %>
   </body>
