--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -8,21 +8,21 @@ $headers-font: "Libertinus Sans", "Helvetica", "sans-serif";
 // To use a font file (.woff) uncomment following lines
 @font-face {
   font-family: "Libertinus Sans";
-  src: font-url('public/fonts/LibertinusSans-Regular.woff2') format('woff'),
-       font-url('public/fonts/LibertinusSans-Regular.otf') format('opentype')
+  src: url('LibertinusSans-Regular.woff2'),
+       url('LibertinusSans-Regular.otf')
 }
 
 @font-face {
   font-family: "Libertinus Sans";
-  src: font-url('public/fonts/LibertinusSans-Bold.woff2') format('woff'),
-       font-url('public/fonts/LibertinusSans-Bold.otf') format('truetype');
+  src: url('LibertinusSans-Bold.woff2'),
+       url('LibertinusSans-Bold.otf');
   font-weight: bold;
 }
 
 @font-face {
   font-family: "Libertinus Sans";
-  src: font-url('public/fonts/LibertinusSans-Italic.woff2') format('woff'),
-       font-url('public/fonts/LibertinusSans-Italic.otf') format('opentype');
+  src: url('LibertinusSans-Italic.woff2'),
+       url('LibertinusSans-Italic.otf');
   font-style: italic;
 }
 
