Added tags to index cards

--- a/app/assets/stylesheets/components/_index-cards.scss
+++ b/app/assets/stylesheets/components/_index-cards.scss
@@ -38,3 +38,20 @@
 .card-product .card-product-infos {
   padding: 8px 8px 8px 16px;
 }
+
+.btn-tag {
+  background-color: white;
+}
+
+.btn-tag a {
+  color: #6c757d;
+}
+
+.btn-tag p :hover {
+  color: white;
+}
+
+.btn-tag p {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
