Added tags to daycare show

--- a/app/assets/stylesheets/components/_index-cards.scss
+++ b/app/assets/stylesheets/components/_index-cards.scss
@@ -14,7 +14,7 @@
 
 .card-product h2 {
   font-size: 18px;
-  font-weight: bold;
+  // font-weight: 600;
   margin: 0;
 }
 
@@ -54,4 +54,8 @@
 .btn-tag p {
   padding-top: 4px;
   padding-bottom: 4px;
+}
+
+.green {
+  color: #38a858
 }
