--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -56,3 +56,7 @@ margin-bottom: 2px;
 .btn  {
   border-radius: 12px;
 }
+
+.features-line-break {
+  border-right: 1px solid rgba(80,80,80,0.2);
+}
