cleaned up some css and margins

--- a/app/assets/stylesheets/components/_tags.scss
+++ b/app/assets/stylesheets/components/_tags.scss
@@ -28,7 +28,14 @@
 }
 
 .tags-features i {
+  margin-bottom: 0.75em;
+  margin-top: 0.75em;
   color: #FF6053;
+}
+
+.tags-features p {
+  margin-bottom: 0.75em;
+  margin-top: 0.75em;
 }
 
 .tags-features i::before {
